Define and implement Team management API
- restructure testcontainers due to a strange behavior.
- Define and fine adjustments on Team api definition
- Implements Team API
- Create test scenarios for Team API
- Refactor some components on main and test to improve reusability